--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="right">
               <p class="title">白石 玲王</p>
               <p class="text">
-                しらい れお<br><br>
+                しらいし れお<br><br>
                 最初は講座についていけるか不安でしたが、インストラクターの皆さんのおかげで、しっかりついていくことができ楽しく授業を受けることができました。<br>
                 ありがとうございました。
               </p>
